# docs/swagger.yaml
@@ -15,11 +15,25 @@ definitions:
       saveInfoId:
         type: integer
     type: object
+  request.DeleteProjectRequest:
+    properties:
+      createrId:
+        type: integer
+      id:
+        type: integer
+    type: object
   request.LoginRequest:
     properties:
       password:
         type: string
       username:
+        type: string
+    type: object
+  request.NewProjectRequest:
+    properties:
+      createrId:
+        type: integer
+      name:
         type: string
     type: object
   request.RegisterRequest:
@@ -50,13 +64,50 @@ info:
   title: Swagger Account API
   version: "1.0"
 paths:
+  /protected/project/create:
+    post:
+      consumes:
+      - application/json
+      description: Create Project
+      parameters:
+      - description: project
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.NewProjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create Project
+      tags:
+      - Project
   /protected/project/creater_id:
     get:
       consumes:
       - application/json
       description: Get project by createrId
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get project by createrId
+      tags:
+      - Project
+  /protected/project/creater_id_detail/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get project create by createrId
       parameters:
-      - description: Account ID
+      - description: Project id
         in: path
         name: id
         required: true
@@ -68,7 +119,65 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Get project by createrId
+      summary: Get project create by createrId
+      tags:
+      - Project
+  /protected/project/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Delete Project
+      parameters:
+      - description: project
+        in: body
+        name: req
+        required: true
+        schema:
+          $ref: '#/definitions/request.DeleteProjectRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete Project
+      tags:
+      - Project
+  /protected/project/joined:
+    get:
+      consumes:
+      - application/json
+      description: Get project joined
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get project joined
+      tags:
+      - Project
+  /protected/project/joined_detail/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get project joined detail
+      parameters:
+      - description: Project id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Get project joined detail
       tags:
       - Project
   /public/confirm_code:
